--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  -webkit-font-smoothing: antialised;
+  text-rendering: optimizeLegibility;
+}
